--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,10 @@ body {
 #title {
   grid-area: 1 / 1 / 2 / 3;
   background-color: lightblue;
+  box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.6);
+  z-index: 100;
 }
 
 #title > p {
@@ -34,6 +38,10 @@ body {
 #nav-bar {
   grid-area: 2 / 1 / 3 / 2;
   background-color: lightcoral;
+  box-shadow: 7px 0px 10px 1px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 7px 0px 10px 1px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 7px 0px 10px 1px rgba(0, 0, 0, 0.6);
+  z-index: 50;
 }
 
 #content-area {
