Place objects in their own modules
Imported into main index.js

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,7 +16,11 @@
     <div id="title">
       <p>/ to-do.</p>
     </div>
-    <div id="nav-bar"></div>
-    <div id="content-area"></div>
+    <div id="nav-bar">
+      <button></button>
+    </div>
+    <div id="content-area">
+      <div class="card">This is a task</div>
+    </div>
   </body>
 </html>
