--- a/src/style.css
+++ b/src/style.css
@@ -20,9 +20,9 @@ body {
 #title {
   grid-area: 1 / 1 / 2 / 3;
   background-color: lightblue;
-  box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
   z-index: 100;
 }
 
@@ -38,13 +38,25 @@ body {
 #nav-bar {
   grid-area: 2 / 1 / 3 / 2;
   background-color: lightcoral;
-  box-shadow: 7px 0px 10px 1px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 7px 0px 10px 1px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 7px 0px 10px 1px rgba(0, 0, 0, 0.6);
+  box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
   z-index: 50;
 }
 
 #content-area {
   grid-area: 2 / 2 / 3 / 3;
   background-color: lightgreen;
+}
+
+.card {
+  box-sizing: border-box;
+  margin: 4rem;
+  padding: 2rem;
+  width: 300px;
+  height: 300px;
+  background-color: rgb(255, 255, 17);
+  box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
 }
