Add event handler that deletes projects
When clicked, the project card deletes the project from the array and
rebuilds the sidebar with the new list.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,8 +16,11 @@
     <div id="title">
       <p>/ to-do.</p>
     </div>
-    <div id="nav-bar">
-      <button></button>
+    <div id="side-bar">
+      <h1>Projects</h1>
+      <input type="text" id="project-name" />
+      <button id="new-project">New Project</button>
+      <div id="project-container"></div>
     </div>
     <div id="content-area">
       <div class="card">This is a task</div>
