--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: 250px 1fr;
   grid-template-rows: 100px 1fr;
 }
 
@@ -35,13 +35,18 @@ body {
   padding-left: 2rem;
 }
 
-#nav-bar {
+#side-bar {
   grid-area: 2 / 1 / 3 / 2;
   background-color: lightcoral;
   box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
   z-index: 50;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
 }
 
 #content-area {
