Place input in a form element
Now the user can submit a project by hitting enter

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,8 +18,10 @@
     </div>
     <div id="side-bar">
       <h1>Projects</h1>
-      <input type="text" id="project-name" />
-      <button id="new-project">New Project</button>
+      <form action="" id="new-project-form">
+        <input type="text" id="project-name" />
+        <button id="new-project">New Project</button>
+      </form>
       <div id="project-container"></div>
     </div>
     <div id="content-area">
