--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,12 +17,22 @@
       <p>/ to-do.</p>
     </div>
     <div id="side-bar">
+      <div id="inbox">
+        <a href="#">Inbox</a>
+      </div>
+      <div id="today">
+        <a href="#">Today</a>
+      </div>
+      <div id="this-week">
+        <a href="#">This Week</a>
+      </div>
       <h1>Projects</h1>
+      <div id="project-container"></div>
+      <div id="project-container"></div>
       <form action="" id="new-project-form">
         <input type="text" id="project-name" />
         <button id="new-project">New Project</button>
       </form>
-      <div id="project-container"></div>
     </div>
     <div id="content-area">
       <div class="card">This is a task</div>
