Add project entry section
Used javascript to create buttons that switches the mode for entry of a
new project.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -28,11 +28,11 @@
       </div>
       <h1>Projects</h1>
       <div id="project-container"></div>
-      <div id="project-container"></div>
-      <form action="" id="new-project-form">
-        <input type="text" id="project-name" />
-        <button id="new-project">New Project</button>
+      <form action="" id="">
+        <input type="text" name="" id="task-input" />
+        <button id="add-task-button">Add Task</button>
       </form>
+      <div id="create-project-prompt"></div>
     </div>
     <div id="content-area">
       <div class="card">This is a task</div>
