Move task input to main content area

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -28,14 +28,14 @@
       </div>
       <h1>Projects</h1>
       <div id="project-container"></div>
+      <div id="create-project-prompt"></div>
+    </div>
+    <div id="content-area">
+      <div id="task-area"></div>
       <form action="" id="">
         <input type="text" name="" id="task-input" />
         <button id="add-task-button">Add Task</button>
       </form>
-      <div id="create-project-prompt"></div>
-    </div>
-    <div id="content-area">
-      <div class="card">This is a task</div>
     </div>
   </body>
 </html>
