--- a/src/style.css
+++ b/src/style.css
@@ -54,16 +54,59 @@ body {
 }
 
 .project-card {
-  width: 90%;
-  padding: 0.5rem;
+  box-sizing: border-box;
+  height: fit-content;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   border-radius: 6px;
+  align-items: center;
 }
 
 .project-card:hover {
   background-color: rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+.project-card > p {
+  padding: 1rem;
+}
+
+.project-card:hover > .delete-project-button {
+  display: block;
+}
+
+.delete-project-button {
+  height: 50px;
+  box-sizing: border-box;
+  display: none;
+  background: none;
+  border: none;
+  border-radius: 0 6px 6px 0;
+  padding: 1rem;
+  padding-left: 1.25rem;
+}
+
+.delete-project-button:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+}
+
+#create-project-prompt {
+  width: 100%;
+}
+
+#new-project-button {
+  background: none;
+  padding: 0.75rem;
+  border: none;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+#new-project-button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 #content-area {
@@ -83,8 +126,8 @@ body {
   box-sizing: border-box;
   margin-block: 1rem;
   padding: 2rem;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 2rem;
   background-color: rgb(255, 255, 17);
   box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
