Style and align add and cancel buttons

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,6 @@ body {
 }
 
 .project-card {
-  box-sizing: border-box;
   height: fit-content;
   width: 100%;
   display: flex;
@@ -73,12 +72,11 @@ body {
 }
 
 .project-card:hover > .delete-project-button {
-  display: block;
+  display: inline-block;
 }
 
 .delete-project-button {
   height: 50px;
-  box-sizing: border-box;
   display: none;
   background: none;
   border: none;
@@ -107,6 +105,32 @@ body {
 
 #new-project-button:hover {
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+#project-name {
+  width: 100%;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  margin-bottom: 0.5rem;
+  outline: none;
+  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+}
+
+#button-container {
+  display: flex;
+  gap: 0.5rem;
+}
+
+#add,
+#cancel {
+  padding: 0.5rem;
+  flex: 1;
+  border: none;
+  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
 }
 
 #content-area {
