--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ body {
 
 #side-bar {
   grid-area: 2 / 1 / 3 / 2;
-  background-color: lightcoral;
+  background-color: hsl(0, 79%, 72%);
   box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
@@ -54,12 +54,17 @@ body {
 }
 
 .project-card {
+  background-color: hsl(0, 79%, 85%);
   height: fit-content;
   width: 100%;
+  margin-bottom: 0.5rem;
   display: flex;
   justify-content: space-between;
   border-radius: 6px;
   align-items: center;
+  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
 }
 
 .project-card:hover {
@@ -113,6 +118,7 @@ body {
   box-sizing: border-box;
   margin-bottom: 0.5rem;
   outline: none;
+  border-radius: 6px;
   box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
@@ -128,6 +134,7 @@ body {
   padding: 0.5rem;
   flex: 1;
   border: none;
+  border-radius: 6px;
   box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
