--- a/src/style.css
+++ b/src/style.css
@@ -24,9 +24,9 @@ body {
 #title {
   grid-area: 1 / 1 / 2 / 3;
   background-color: lightblue;
-  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 1);
   z-index: 100;
 }
 
@@ -42,15 +42,15 @@ body {
 #side-bar {
   grid-area: 2 / 1 / 3 / 2;
   background-color: hsl(0, 79%, 72%);
-  box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 0.6);
   z-index: 50;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
   gap: 1rem;
+  -webkit-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 1);
+  box-shadow: 6px 0px 6px 0px rgba(0, 0, 0, 1);
 }
 
 #project-container {
@@ -59,16 +59,18 @@ body {
 
 .project-card {
   background-color: hsl(0, 79%, 85%);
+  box-sizing: border-box;
   height: fit-content;
   width: 100%;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
-  border-radius: var(--border-radius);
   align-items: stretch;
-  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  border-radius: var(--border-radius);
+  border: 4px solid black;
+  -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
 }
 
 .project-card:hover {
@@ -89,7 +91,7 @@ body {
   display: none;
   background: none;
   border: none;
-  border-radius: 0 6px 6px 0;
+  border-radius: 0 2px 2px 0;
   padding-inline: 1rem;
   padding-left: 1.25rem;
 }
@@ -110,6 +112,7 @@ body {
   width: 100%;
   cursor: pointer;
   border-radius: var(--border-radius);
+  border: 4px solid black;
 }
 
 #new-project-button:hover {
@@ -122,10 +125,11 @@ body {
   box-sizing: border-box;
   margin-bottom: 0.5rem;
   outline: none;
+  border: 4px solid black;
   border-radius: var(--border-radius);
-  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
 }
 
 #button-container {
@@ -135,13 +139,23 @@ body {
 
 #add,
 #cancel {
+  cursor: pointer;
   padding: 0.5rem;
   flex: 1;
   border: none;
   border-radius: var(--border-radius);
-  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.6);
+  border: 4px solid black;
+  -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
+}
+
+#add {
+  background-color: #00ff1f;
+}
+
+#cancel {
+  background-color: rgb(255, 58, 58);
 }
 
 #content-area {
@@ -166,10 +180,11 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
+  border: 4px solid black;
   background-color: rgb(255, 255, 17);
-  box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 1);
+  box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 1);
 }
 
 .card > p {
@@ -183,7 +198,11 @@ body {
   padding-inline: 2rem;
   cursor: pointer;
   border: none;
-  border-radius: 0 6px 6px 0;
+  border-radius: 0 2px 2px 0;
+}
+
+.card:hover {
+  /* background-color: rgba(0, 0, 0, 0.1); */
 }
 
 .card:hover > .delete-task {
