--- a/src/style.css
+++ b/src/style.css
@@ -187,6 +187,20 @@ body {
   box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 1);
 }
 
+#new-task-button {
+  border-radius: var(--border-radius);
+  margin-top: 1rem;
+  padding: 1rem;
+  width: 100%;
+  border: 4px solid black;
+  background: none;
+}
+
+#new-task-button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
 .card > p {
   margin: 2rem;
   box-sizing: border-box;
