--- a/src/style.css
+++ b/src/style.css
@@ -187,6 +187,10 @@ body {
   box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 1);
 }
 
+.high-priority {
+  border: 4px solid red;
+}
+
 #new-task-button {
   border-radius: var(--border-radius);
   margin-top: 1rem;
