Style new task prompt area

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -29,23 +29,7 @@
     </div>
     <div id="content-area">
       <div id="task-area"></div>
-      <div id="new-task-prompt">
-        <form action="" id="">
-          <label for="task-input" required>Task Name</label>
-          <input type="text" name="task_input" id="task-input" />
-          <label for="due-date">Due Date</label>
-          <input type="date" name="" id="due-date" />
-          <input
-            type="checkbox"
-            id="high-priority"
-            name="priority"
-            value="high-priority"
-          />
-          <label for="high-priortiy">High Priority</label>
-          <button id="add-task-button">Add Task</button>
-        </form>
-        <button id="new-task-button">+ New Task</button>
-      </div>
+      <div id="new-task-prompt"></div>
     </div>
   </body>
 </html>
