--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   --border-radius: 6px;
+  --thick-border: 4px solid black;
 }
 
 html {
@@ -67,7 +68,7 @@ body {
   justify-content: space-between;
   align-items: stretch;
   border-radius: var(--border-radius);
-  border: 4px solid black;
+  border: var(--thick-border);
   -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
   box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
@@ -112,20 +113,20 @@ body {
   width: 100%;
   cursor: pointer;
   border-radius: var(--border-radius);
-  border: 4px solid black;
+  border: var(--thick-border);
 }
 
 #new-project-button:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-#project-name {
+input {
   width: 100%;
   padding: 0.5rem;
   box-sizing: border-box;
   margin-bottom: 0.5rem;
   outline: none;
-  border: 4px solid black;
+  border: var(--thick-border);
   border-radius: var(--border-radius);
   -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
@@ -138,23 +139,27 @@ body {
 }
 
 #add,
-#cancel {
+#cancel,
+#add-task-button,
+#cancel-button {
   cursor: pointer;
   padding: 0.5rem;
   flex: 1;
   border: none;
   border-radius: var(--border-radius);
-  border: 4px solid black;
+  border: var(--thick-border);
   -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
   box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
 }
 
-#add {
+#add,
+#add-task-button {
   background-color: #00ff1f;
 }
 
-#cancel {
+#cancel,
+#cancel-button {
   background-color: rgb(255, 58, 58);
 }
 
@@ -177,10 +182,10 @@ body {
   height: fit-content;
   width: 100%;
   border-radius: var(--border-radius);
+  border: var(--thick-border);
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  border: 4px solid black;
   background-color: rgb(255, 255, 17);
   -webkit-box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 1);
   -moz-box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 1);
@@ -192,11 +197,11 @@ body {
 }
 
 #new-task-button {
-  border-radius: var(--border-radius);
   margin-top: 1rem;
   padding: 1rem;
   width: 100%;
-  border: 4px solid black;
+  border-radius: var(--border-radius);
+  border: var(--thick-border);
   background: none;
 }
 
@@ -230,4 +235,47 @@ body {
 .delete-task:hover {
   background-color: rgba(0, 0, 0, 0.2);
   font-weight: bold;
+}
+
+#task-input-form {
+  border: var(--thick-border);
+  border-radius: var(--border-radius);
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+#task-inputs {
+  flex: 4;
+  gap: 0.5rem;
+
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+#task-inputs > div:first-child {
+  flex: 4;
+  min-width: 12rem;
+}
+
+#task-buttons {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+#checkbox {
+  display: flex;
+  flex-direction: row;
+}
+
+#high-priority {
+  box-shadow: none;
 }
