Refactor task card function
Separated the card creation function from the task page creation
function.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,9 +17,7 @@
       <p>/ to-do.</p>
     </div>
     <div id="side-bar">
-      <div id="today">
-        <a href="#">Today</a>
-      </div>
+      <button id="today">Today</button>
       <div id="this-week">
         <a href="#">This Week</a>
       </div>
