Add today filter

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,10 +18,10 @@
     </div>
     <div id="side-bar">
       <button id="today">Today</button>
-      <div id="this-week">
-        <a href="#">This Week</a>
-      </div>
+      <button id="this-week">This Week</button>
+
       <h2>Projects</h2>
+
       <div id="project-container"></div>
       <div id="create-project-prompt"></div>
     </div>
