Add local storage
Saves tasks and projects to local storage and loads it on page load.

--- a/src/style.css
+++ b/src/style.css
@@ -220,9 +220,14 @@ input {
   cursor: pointer;
 }
 
-.card > p {
-  margin: 2rem;
+.task-text {
   box-sizing: border-box;
+  margin: 2rem;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .delete-task {
